epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
// ============================================================================
// Opaque Types (handled internally by C++ implementation)
// ============================================================================

typedef struct EpubNativePackageDocument EpubNativePackageDocument;
// ============================================================================
// String Handling
// ============================================================================

/**
 * Free a string returned by the library
 * @param str String to free
 */
EPUB_NATIVE_API void epub_native_string_free(const char* str);
// ============================================================================
// Package Document Reader (OPF parsing)
// ============================================================================

/**
 * Parse an OPF package document from XML content
 * @param xml_content UTF-8 XML string
 * @param xml_length Length of XML content
 * @param out_doc Output document pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_parse(
    const char* xml_content,
    size_t xml_length,
    EpubNativePackageDocument** out_doc
);
/**
 * Free a package document
 * @param doc Document to free
 */
EPUB_NATIVE_API void epub_native_package_free(EpubNativePackageDocument* doc);
/**
 * Get the package ID (unique identifier)
 * @param doc Package document
 * @return Package ID string (caller must free)
 */
EPUB_NATIVE_API const char* epub_native_package_get_id(
    EpubNativePackageDocument* doc
);
/**
 * Get manifest item by ID
 * @param doc Package document
 * @param item_id Item ID to find
 * @param out_href Output href (caller must free)
 * @param out_media_type Output media type (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_manifest_item(
    EpubNativePackageDocument* doc,
    const char* item_id,
    const char** out_href,
    const char** out_media_type
);
/**
 * Get spine item IDs in reading order
 * @param doc Package document
 * @param out_ids Output array of IDs
 * @param out_count Output count of IDs
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_package_get_spine_items(
    EpubNativePackageDocument* doc,
    const char*** out_ids,
    size_t* out_count
);