epub4j-native/java/src/main/java/org/grimmory/epub4j/native_parsing/EpubNativeHeaders.java

// Generated by jextract

package org.grimmory.epub4j.native_parsing;

import java.lang.invoke.*;
import java.lang.foreign.*;

public class EpubNativeHeaders extends EpubNativeHeaders$shared {

    // Ensure native library is loaded before any symbol lookup
    static {
        // Force PanamaConstants to initialize first (loads native library)
        try {
            Class.forName("org.grimmory.epub4j.native_parsing.PanamaConstants");
        } catch (ClassNotFoundException e) {
            throw new RuntimeException("Failed to load PanamaConstants", e);
        }
    }

    EpubNativeHeaders() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());


    private static class epub_native_string_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_string_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_string_free(const char *str)
     * }
     */
    public static FunctionDescriptor epub_native_string_free$descriptor() {
        return epub_native_string_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_string_free(const char *str)
     * }
     */
    public static MethodHandle epub_native_string_free$handle() {
        return epub_native_string_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_string_free(const char *str)
     * }
     */
    public static MemorySegment epub_native_string_free$address() {
        return epub_native_string_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_string_free(const char *str)
     * }
     */
    public static void epub_native_string_free(MemorySegment str) {
        var mh$ = epub_native_string_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_string_free", str);
            }
            mh$.invokeExact(str);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_parse {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_parse");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_parse(const char *xml_content, size_t xml_length, EpubNativePackageDocument **out_doc)
     * }
     */
    public static FunctionDescriptor epub_native_package_parse$descriptor() {
        return epub_native_package_parse.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_parse(const char *xml_content, size_t xml_length, EpubNativePackageDocument **out_doc)
     * }
     */
    public static MethodHandle epub_native_package_parse$handle() {
        return epub_native_package_parse.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_parse(const char *xml_content, size_t xml_length, EpubNativePackageDocument **out_doc)
     * }
     */
    public static MemorySegment epub_native_package_parse$address() {
        return epub_native_package_parse.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_parse(const char *xml_content, size_t xml_length, EpubNativePackageDocument **out_doc)
     * }
     */
    public static int epub_native_package_parse(MemorySegment xml_content, long xml_length, MemorySegment out_doc) {
        var mh$ = epub_native_package_parse.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_parse", xml_content, xml_length, out_doc);
            }
            return (int)mh$.invokeExact(xml_content, xml_length, out_doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_package_free(EpubNativePackageDocument *doc)
     * }
     */
    public static FunctionDescriptor epub_native_package_free$descriptor() {
        return epub_native_package_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_package_free(EpubNativePackageDocument *doc)
     * }
     */
    public static MethodHandle epub_native_package_free$handle() {
        return epub_native_package_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_package_free(EpubNativePackageDocument *doc)
     * }
     */
    public static MemorySegment epub_native_package_free$address() {
        return epub_native_package_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_package_free(EpubNativePackageDocument *doc)
     * }
     */
    public static void epub_native_package_free(MemorySegment doc) {
        var mh$ = epub_native_package_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_free", doc);
            }
            mh$.invokeExact(doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *epub_native_package_get_id(EpubNativePackageDocument *doc)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_id$descriptor() {
        return epub_native_package_get_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *epub_native_package_get_id(EpubNativePackageDocument *doc)
     * }
     */
    public static MethodHandle epub_native_package_get_id$handle() {
        return epub_native_package_get_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *epub_native_package_get_id(EpubNativePackageDocument *doc)
     * }
     */
    public static MemorySegment epub_native_package_get_id$address() {
        return epub_native_package_get_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *epub_native_package_get_id(EpubNativePackageDocument *doc)
     * }
     */
    public static MemorySegment epub_native_package_get_id(MemorySegment doc) {
        var mh$ = epub_native_package_get_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_id", doc);
            }
            return (MemorySegment)mh$.invokeExact(doc);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_manifest_item {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_manifest_item");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_manifest_item(EpubNativePackageDocument *doc, const char *item_id, const char **out_href, const char **out_media_type)
     * }
     */
    public static FunctionDescriptor epub_native_package_get_manifest_item$descriptor() {
        return epub_native_package_get_manifest_item.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_manifest_item(EpubNativePackageDocument *doc, const char *item_id, const char **out_href, const char **out_media_type)
     * }
     */
    public static MethodHandle epub_native_package_get_manifest_item$handle() {
        return epub_native_package_get_manifest_item.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_manifest_item(EpubNativePackageDocument *doc, const char *item_id, const char **out_href, const char **out_media_type)
     * }
     */
    public static MemorySegment epub_native_package_get_manifest_item$address() {
        return epub_native_package_get_manifest_item.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_package_get_manifest_item(EpubNativePackageDocument *doc, const char *item_id, const char **out_href, const char **out_media_type)
     * }
     */
    public static int epub_native_package_get_manifest_item(MemorySegment doc, MemorySegment item_id, MemorySegment out_href, MemorySegment out_media_type) {
        var mh$ = epub_native_package_get_manifest_item.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_package_get_manifest_item", doc, item_id, out_href, out_media_type);
            }
            return (int)mh$.invokeExact(doc, item_id, out_href, out_media_type);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_package_get_spine_items {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_package_get_spine_items");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
